<resources>
    <string name="app_name">Biometro</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="save_login">로그인 상태유지</string>
    <string name="login">로그인</string>
    <string name="forgot_password">아이디 | 비밀번호 찾기</string>
    <string name="register">회원가입</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_success_desc">로그인에 성공하였습니다.</string>
    <string name="confirm">확인</string>
    <string name="login_failed">로그인 실패</string>
    <string name="login_failed_desc">이메일주소 또는 비밀번호가 맞지 않습니다.\n확인 후 다시 로그인 해주세요.</string>
    <string name="toast_empty_email">귀하의 이메일이 없습니다.</string>
    <string name="toast_empty_pass">사용자암호를 입력하세요.</string>
    <string name="login_title">회원가입</string>
    <string name="title_agreement">약관동의</string>
    <string name="biometro_band">BIOMETRO BAND</string>
    <string name="agree_service">서비스를</string>
    <string name="agree_using">이용하기 위해서는</string>
    <string name="serive_agree">서비스 약관 동의</string>
    <string name="and">와</string>
    <string name="agree_verify">실명인증</string>
    <string name="agree_need">이 필요합니다.</string>
    <string name="agree_all">모두 동의</string>
    <string name="agree_integration_user">통합회원 이용약관</string>
    <string name="agree_indivial_user">개인정보 처리방침</string>
    <string name="start">시작하기</string>
    <string name="title_privacy">통합회원 이용약관</string>
    <string name="desc_privacy">
        제1장 총칙\n제1조(목적) 이 약관은 회사가 온라인으로 제공하는 디지털콘텐츠(이하 "콘텐츠"라고 한다) 및 제반서비스의 이용과 관련하여 회사와 이용자와의 권리, 의무 및 책임사항 등을 규정함을 목적으로 합니다.
\n\n
제2조(정의) 이 약관에서 사용하는 용어의 정의는 다음과 같습니다.
1. "회사"라 함은 "콘텐츠" 산업과 관련된 경제활동을 영위하는 자로서 콘텐츠 및 제반서비스를 제공하는 자를 말합니다.
\n\n
2. "이용자"라 함은 "회사"의 사이트에 접속하여 이 약관에 따라 "회사"가 제공하는 "콘텐츠" 및 제반서비스를 이용하는 회원 및 비회원을 말합니다.
\n\n
3. "회원"이라 함은 "회사"와 이용계약을 체결하고 "이용자" 아이디(ID)를 부여받은 "이용자"로서 "회사"의 정보를 지속적으로 제공받으며 "회사"가 제공하는 서비스를 지속적으로 이용할 수 있는 자를 말합니다.
\n\n
4. "비회원"이라 함은 "회원"이 아니면서 "회사"가 제공하는 서비스를 이용하는 자를 말합니다.
    </string>
    <string name="verify_indivial">본인인증</string>
    <string name="verify_module">인증모듈</string>
    <string name="info_input">정보입력</string>
    <string name="info_detail1">이메일을 입력하고 </string>
    <string name="info_detail2">이메일 인증</string>
    <string name="info_detail3">을 진행해 주세요.</string>
    <string name="info_detail4">그리고, 비밀번호를 입력하면</string>
    <string name="info_detail5">회원가입</string>
    <string name="info_detail6">이</string>
    <string name="info_detail7">완료</string>
    <string name="info_detail8">됩니다.</string>
    <string name="sample_name">홍길동</string>
    <string name="sample_phone">010-1234-5678</string>
    <string name="hint_email">이메일 주소</string>
    <string name="hint_username">사용자이름</string>
    <string name="hint_phone">사용자 전화 번호</string>
    <string name="verify">인증</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="hint_product_name">보호자 이름</string>
    <string name="hint_product_phone">보호자 휴대폰 번호</string>
    <string name="enter">가입하기</string>
    <string name="title_confirm">이메일 미인증 회원입니다.</string>
    <string name="resend_email">인증메일 재발송</string>
    <string name="verify_desc1">안녕하세요</string>
    <string name="verify_desc2">회원님이 가입하신 계정의</string>
    <string name="verify_desc3">이메일(아이디)이</string>
    <string name="verify_desc4">아직</string>
    <string name="verify_desc5">인증되지 않았습니다</string>
    <string name="verify_desc6">아래 버튼을 클릭</string>
    <string name="verify_desc7">하시면</string>
    <string name="verify_desc8">이메일이 재발송</string>
    <string name="verify_desc9">됩니다</string>
    <string name="verify_desc10">해당 이메일로 이동하셔서</string>
    <string name="verify_desc11">인증하신 후 이용해 주시기 바랍니다</string>
    <string name="finish">완료</string>
    <string name="enter_finish">가입 완료</string>
    <string name="sample_id">000님</string>
    <string name="complete_desc1">회원이 되신것을 환영합니다</string>
    <string name="complete_desc2">가입하신 아이디는</string>
    <string name="sample_email1">abcd1@naver.com</string>
    <string name="complete_desc3">입니다</string>
    <string name="monitoring">모니터링</string>
    <string name="home">홈</string>
    <string name="setting">설정</string>
    <string name="band_connect">밴드 연결</string>
    <string name="gateway_connect">게이트웨이 연결</string>
    <string name="my_info">내정보</string>
    <string name="product_info">보호자 정보관리</string>
    <string name="danger_noti">위급상황 자동알림</string>
    <string name="danger_desc">위급상황 시, 등록된 보호자에게 자동으로 알림이 전송</string>
    <string name="notification">공지사항</string>
    <string name="app_version">앱 버전 정보</string>
    <string name="sample_version">v1.0.0</string>
    <string name="logout">로그아웃</string>
    <string name="name">이름</string>
    <string name="mobile">휴대폰 번호</string>
    <string name="sample_email">sample@naver.com</string>
    <string name="profile_email">이메일 주소</string>
    <string name="product_title">보호자 정보</string>
    <string name="to_list">목록으로</string>
    <string name="no_name">이름을 입력하세요.</string>
    <string name="alt_connect_server">서버접속중...</string>
    <string name="success_register">회원가입성공!!!</string>
    <string name="failed_register">중복되는 아이디를 입력하였습니다.</string>
    <string name="no_pro_phone">보호자정보를 입력하세요.</string>
    <string name="no_pro_name">보호자정보를 입력하세요.</string>
    <string name="no_match">암호확인...</string>
    <string name="no_pass">암호를 확인하세요.</string>
    <string name="no_email">이메일을 입력하세요.</string>
    <string name="no_phone">핸드폰을 입력하세요.</string>
    <string name="failed_get_user">사용자정보를 얻을수 없습니다. 잠시후 다시 시도하세요.</string>
    <string name="failed_set_safeuser">보호자정보오유. 잠시후 다시 시도하시십요.</string>
    <string name="success_set_safeuser">보호자변경 성공!!!</string>
    <string name="empty_value">---</string>
    <string name="no_data">측정된 데이터가 없습니다.</string>
    <string name="empty_bpm">- ~ - bpm</string>
    <string name="from_to_time">오전 0시 ~ 오후24시 까지</string>
    <string name="calendar">Calendar</string>
    <string name="empty_percent">---%</string>
    <string name="empty_temp">--.- Cº</string>
    <string name="information">Information</string>
    <string name="logo">Logo</string>
    <string name="loading">Loading</string>
</resources>