<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_marginTop="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_logo"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        style="@style/NanumTextBold"
        android:layout_marginTop="120dp"
        android:layout_marginStart="@dimen/dimen_txt_margin"
        android:layout_marginEnd="@dimen/dimen_txt_margin"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        style="@style/NotoTextBold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/dimen_txt_margin"
        android:layout_marginEnd="@dimen/dimen_txt_margin"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <CheckBox
        android:layout_marginStart="@dimen/dimen_txt_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/NanumTextBold"
        android:buttonTint="@color/color_main"
        android:textSize="14sp"
        android:text="@string/save_login" />

    <android.widget.Button
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/dimen_txt_margin"
        android:layout_marginEnd="@dimen/dimen_txt_margin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_back_color"
        style="@style/NanumTextBold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:onClick="onClickLoginButton"/>

    <LinearLayout
        android:layout_marginTop="27dp"
        android:layout_marginStart="@dimen/dimen_txt_margin"
        android:layout_marginEnd="@dimen/dimen_txt_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/NanumTextLight"
            android:textColor="@color/color_text_gray"
            android:text="@string/forgot_password" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            style="@style/NanumTextLight"
            android:textColor="@color/color_main"
            android:text="@string/register"
            android:onClick="onClickRegisterLbl"/>
    </LinearLayout>
</LinearLayout>